Small fixes synthetic user

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -14,19 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 108,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -72,7 +73,7 @@
     "    return profiles, deviations\n",
     "\n",
     "# Selección del perfil de vino con algo de sentido común (en general)\n",
-    "def select_taste_profile(pairing, profiles, deviations, prob=.1, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
+    "def select_taste_profile(pairing, profiles, deviations, prob=.2, categories=[\"leve\", \"moderado\", \"marcado\", \"intenso\"]):\n",
     "    selected_profile = {}\n",
     "    for taste in [\"body\", \"tannis\", \"sweetness\", \"acidity\"]:\n",
     "        if random.random() < prob:\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "id": "6dbbb253",
    "metadata": {},
    "outputs": [
@@ -95,12 +96,12 @@
      "data": {
       "text/plain": [
        "{'body': 'marcado',\n",
-       " 'tannis': 'marcado',\n",
-       " 'sweetness': 'moderado',\n",
+       " 'tannis': 'moderado',\n",
+       " 'sweetness': 'marcado',\n",
        " 'acidity': 'marcado'}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +124,53 @@
     "\n",
     "# Elección aleatoria de una meal y obtención de su pairing principal\n",
     "selected_meal = select_random_meal(meals_df)\n",
-    "main_pairing = selected_meal[\"Ingrediente Principal\"].lower()\n",
+    "main_pairing = \"rich fish (salmon, tuna etc)\"#selected_meal[\"Ingrediente Principal\"].lower()\n",
     "\n",
     "# Elección del perfil del vino, teniendo en cuenta algo de sentido común de los usuarios\n",
-    "selected_profile = select_taste_profile(pairing=main_pairing, profiles=profiles, deviations=deviations, prob=.1)\n",
-    "\n"
+    "selected_profile = select_taste_profile(pairing=main_pairing, profiles=profiles, deviations=deviations, prob=.2)\n",
+    "\n",
+    "# Estaría bueno acá poder ver una distribución tipo histograma de los sabores según el main pairing elegido\n",
+    "selected_profile"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41c7ec81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['any junk food will do',\n",
+       " 'aperitif',\n",
+       " 'appetizers and snacks',\n",
+       " 'beef',\n",
+       " 'blue cheese',\n",
+       " 'cured meat',\n",
+       " 'game (deer, venison)',\n",
+       " \"goat's milk cheese\",\n",
+       " 'lamb',\n",
+       " 'lean fish',\n",
+       " 'mature and hard cheese',\n",
+       " 'mild and soft cheese',\n",
+       " 'mushrooms',\n",
+       " 'pasta',\n",
+       " 'pork',\n",
+       " 'poultry',\n",
+       " 'rich fish (salmon, tuna etc)',\n",
+       " 'shellfish',\n",
+       " 'spicy food',\n",
+       " 'veal',\n",
+       " 'vegetarian']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
