--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -8,26 +8,37 @@
     "Me gustaría que el usuario me de:\n",
     "- Pairings: uno o más combinaciones de alimentos con los que quiere maridar el vino. (OK)\n",
     "- Body, tannis, sweetness, acidity: de 0 a 1 (OK)\n",
-    "- Uvas: una selección de uvas que yo determine + otras (todas las que no estén incluidas dentro de las que le doy como opción individual). (WIP)\n",
-    "- Price: el rango de precios en el cual buscar vinos. (WIP)"
+    "- Uvas: una selección de uvas que yo determine + otras (todas las que no estén incluidas dentro de las que le doy como opción individual). (OK)\n",
+    "- Price: el rango de precios en el cual buscar vinos. (OK)\n",
+    "\n",
+    "- Gustó la recomendación: debería haber una función que te diga si al usuario le gustó o no la recomendación en base a diversos parámetros (pensar en el modelo por puntaje y filtro que hice).\n",
+    "\n",
+    "1. Pasar a Clase\n",
+    "2. Crear datos sintéticos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 262,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "sys.path.append(os.path.abspath(os.path.join('..', '..', 'src', 'utils')))\n",
+    "import utils as ut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1053,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -83,25 +94,73 @@
     "            std = deviations[pairing][taste]\n",
     "            valor_seleccionado = np.random.normal(loc=median, scale=std)\n",
     "            selected_profile[taste] = get_category(valor_seleccionado, categories=categories)\n",
-    "    return selected_profile\n"
+    "    return selected_profile\n",
+    "\n",
+    "# Selección de uvas según probabilidad de uva en dataset\n",
+    "def select_grapes(grapes_df, top_n_grapes, min_grapes, max_grapes):\n",
+    "\n",
+    "    top_grapes = grapes_df.sum(axis=0).sort_values(ascending=False).head(top_n_grapes)\n",
+    "    total_grapes_in_df = sum(grapes_df.sum(axis=0))\n",
+    "    top_grapes_prob = top_grapes / total_grapes_in_df\n",
+    "    top_grapes_prob[\"Other\"] = 1 - sum(top_grapes_prob)\n",
+    "    grapes_prob = dict(top_grapes_prob)\n",
+    "\n",
+    "    while True:\n",
+    "        grape_selection = []\n",
+    "        for key, value in grapes_prob.items():\n",
+    "            if random.random() < value:\n",
+    "                grape_selection.append(key)\n",
+    "\n",
+    "        if len(grape_selection) >= min_grapes:\n",
+    "            break\n",
+    "\n",
+    "    if len(grape_selection) > max_grapes:\n",
+    "        grape_selection = grape_selection[:max_grapes]\n",
+    "\n",
+    "    return grape_selection\n",
+    "\n",
+    "\n",
+    "# Selección de rango de precios considerando lógica de usuarios\n",
+    "def select_price_range(df,\n",
+    "                       quantiles=[.075, .125, .25, .375, .5, .625, .75, .875],\n",
+    "                       low_prices_weights=[.2, .3, .25, .15, .05, .025, .015, 0.01, 0, 0],\n",
+    "                       min_dispersion=2):\n",
+    "    \n",
+    "    no_outlier_price = ut.manage_outlier_IQR(df=df[\"price\"], func=\"remove\")\n",
+    "    price_quantiles = no_outlier_price.quantile(quantiles)\n",
+    "    price_quantiles[0], price_quantiles[1] = 0, -1\n",
+    "    price_quantiles = price_quantiles.sort_index()\n",
+    "    price_quantiles = pd.Series(price_quantiles.values)\n",
+    "\n",
+    "    low_price_index = random.choices(population=range(len(price_quantiles)), weights=low_prices_weights, k=1)[0]\n",
+    "\n",
+    "    high_top_limit = len(price_quantiles)\n",
+    "    high_bottom_limit = low_price_index + min_dispersion if (low_price_index + min_dispersion) < len(price_quantiles) else len(price_quantiles)-1\n",
+    "\n",
+    "    high_price_possible = range(high_bottom_limit, high_top_limit)\n",
+    "\n",
+    "    high_prices_weights = [1 / x**1.5 for x in high_price_possible]\n",
+    "\n",
+    "    high_price_index = random.choices(population=high_price_possible, weights=high_prices_weights, k=1)[0]\n",
+    "\n",
+    "    price_range = [int(price_quantiles[low_price_index]), int(price_quantiles[high_price_index])]\n",
+    "\n",
+    "    return price_range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1056,
    "id": "6dbbb253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'body': 'marcado',\n",
-       " 'tannis': 'moderado',\n",
-       " 'sweetness': 'marcado',\n",
-       " 'acidity': 'marcado'}"
+       "[13, 27]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 1056,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,6 +170,9 @@
     "pairings = pd.read_csv(\"../../src/data/processed/aux/pairings.csv\")\n",
     "pairings = list(pairings[\"pairings\"])\n",
     "meals_df = pd.read_excel(\"../../src/data/raw/meals/Meals.xlsx\")\n",
+    "grapes = pd.read_csv(\"../../src/data/processed/aux/grapes.csv\")\n",
+    "grapes = grapes[\"grapes\"]\n",
+    "grape_selection = wines_df[grapes]\n",
     "scaler = MinMaxScaler()\n",
     "\n",
     "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
@@ -124,52 +186,76 @@
     "\n",
     "# Elección aleatoria de una meal y obtención de su pairing principal\n",
     "selected_meal = select_random_meal(meals_df)\n",
-    "main_pairing = \"rich fish (salmon, tuna etc)\"#selected_meal[\"Ingrediente Principal\"].lower()\n",
+    "main_pairing = selected_meal[\"Ingrediente Principal\"].lower()\n",
     "\n",
     "# Elección del perfil del vino, teniendo en cuenta algo de sentido común de los usuarios\n",
     "selected_profile = select_taste_profile(pairing=main_pairing, profiles=profiles, deviations=deviations, prob=.2)\n",
     "\n",
     "# Estaría bueno acá poder ver una distribución tipo histograma de los sabores según el main pairing elegido\n",
-    "selected_profile"
+    "selected_grapes = select_grapes(grape_selection, 8, 1, 4)\n",
+    "\n",
+    "# Elección del rango de precios del vino, teniendo en cuenta lógica de usuario\n",
+    "selected_price = select_price_range(wines_df)\n",
+    "\n",
+    "selected_price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41c7ec81",
+   "execution_count": 951,
+   "id": "f9c6f825",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['any junk food will do',\n",
-       " 'aperitif',\n",
-       " 'appetizers and snacks',\n",
-       " 'beef',\n",
-       " 'blue cheese',\n",
-       " 'cured meat',\n",
-       " 'game (deer, venison)',\n",
-       " \"goat's milk cheese\",\n",
-       " 'lamb',\n",
-       " 'lean fish',\n",
-       " 'mature and hard cheese',\n",
-       " 'mild and soft cheese',\n",
-       " 'mushrooms',\n",
-       " 'pasta',\n",
-       " 'pork',\n",
-       " 'poultry',\n",
-       " 'rich fish (salmon, tuna etc)',\n",
-       " 'shellfish',\n",
-       " 'spicy food',\n",
-       " 'veal',\n",
-       " 'vegetarian']"
+       "(np.float64(13.64), np.float64(-1.0))"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 951,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# random.choices: https://docs.python.org/3/library/random.html#random.choices\n",
+    "\n",
+    "no_outlier_price = ut.manage_outlier_IQR(df=wines_df[\"price\"], func=\"remove\")\n",
+    "price_quantiles = no_outlier_price.quantile([.075, .125, .25, .375, .5, .625, .75, .875])\n",
+    "price_quantiles[0], price_quantiles[1] = 0, -1\n",
+    "price_quantiles = price_quantiles.sort_index()\n",
+    "price_quantiles = pd.Series(price_quantiles.values)\n",
+    "\n",
+    "low_prices_weights = [.2, .3, .25, .15, .05, .025, .015, 0.01, 0, 0]\n",
+    "\n",
+    "low_price_index = random.choices(population=range(len(price_quantiles)), weights=low_prices_weights, k=1)[0]\n",
+    "\n",
+    "high_top_limit = len(price_quantiles)\n",
+    "high_bottom_limit = low_price_index + 2 if (low_price_index + 2) < len(price_quantiles) else (low_price_index + 1)\n",
+    "\n",
+    "high_price_possible = range(high_bottom_limit, high_top_limit)\n",
+    "\n",
+    "high_prices_weights = [1 / x**2 for x in high_price_possible]\n",
+    "\n",
+    "high_price_index = random.choices(population=high_price_possible, weights=high_prices_weights, k=1)[0]\n",
+    "\n",
+    "price_range = price_quantiles[low_price_index], price_quantiles[high_price_index]\n",
+    "\n",
+    "price_range\n",
+    "\n",
+    "#high_price_index = random.choice(high_price_possible)\n",
+    "\n",
+    "# high_price = random.randint(low_price+3,9)\n",
+    "\n",
+    "# print(low_price, high_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a5d9049",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
