Avanzando en la selección aleatoria de vinos y simulación de si gustó o no el vino

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 1057,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1053,
+   "execution_count": null,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -47,6 +47,7 @@
     "# Pandas .quantile: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.quantile.html\n",
     "# np.random.normal: https://numpy.org/doc/2.1/reference/random/generated/numpy.random.normal.html\n",
     "# np.clip: https://numpy.org/doc/2.1/reference/generated/numpy.clip.html \n",
+    "# random.choices: https://docs.python.org/3/library/random.html#random.choices\n",
     "\n",
     "\n",
     "# Selección de pairing\n",
@@ -96,13 +97,18 @@
     "            selected_profile[taste] = get_category(valor_seleccionado, categories=categories)\n",
     "    return selected_profile\n",
     "\n",
+    "# Obtención de top N grapes y su cantidad\n",
+    "def get_top_grapes(grapes_df, top_n_grapes):\n",
+    "    top_grapes = grapes_df.sum(axis=0).sort_values(ascending=False).head(top_n_grapes)\n",
+    "    return top_grapes\n",
+    "\n",
     "# Selección de uvas según probabilidad de uva en dataset\n",
     "def select_grapes(grapes_df, top_n_grapes, min_grapes, max_grapes):\n",
     "\n",
-    "    top_grapes = grapes_df.sum(axis=0).sort_values(ascending=False).head(top_n_grapes)\n",
+    "    top_grapes = get_top_grapes(grapes_df, top_n_grapes)\n",
     "    total_grapes_in_df = sum(grapes_df.sum(axis=0))\n",
     "    top_grapes_prob = top_grapes / total_grapes_in_df\n",
-    "    top_grapes_prob[\"Other\"] = 1 - sum(top_grapes_prob)\n",
+    "    top_grapes_prob[\"Otras Uvas\"] = 1 - sum(top_grapes_prob)\n",
     "    grapes_prob = dict(top_grapes_prob)\n",
     "\n",
     "    while True:\n",
@@ -150,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1056,
+   "execution_count": 1059,
    "id": "6dbbb253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[13, 27]"
+       "[20, 27]"
       ]
      },
-     "execution_count": 1056,
+     "execution_count": 1059,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,61 +208,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 951,
-   "id": "f9c6f825",
+   "execution_count": null,
+   "id": "1a5d9049",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(np.float64(13.64), np.float64(-1.0))"
+       "[0.5,\n",
+       " 0.3333333333333333,\n",
+       " 0.25,\n",
+       " 0.2,\n",
+       " 0.16666666666666666,\n",
+       " 0.14285714285714285,\n",
+       " 0.125,\n",
+       " 0.1111111111111111,\n",
+       " 0.1,\n",
+       " 0.09090909090909091]"
       ]
      },
-     "execution_count": 951,
+     "execution_count": 1087,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# random.choices: https://docs.python.org/3/library/random.html#random.choices\n",
+    "from scipy import stats\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "no_outlier_price = ut.manage_outlier_IQR(df=wines_df[\"price\"], func=\"remove\")\n",
-    "price_quantiles = no_outlier_price.quantile([.075, .125, .25, .375, .5, .625, .75, .875])\n",
-    "price_quantiles[0], price_quantiles[1] = 0, -1\n",
-    "price_quantiles = price_quantiles.sort_index()\n",
-    "price_quantiles = pd.Series(price_quantiles.values)\n",
+    "wines_copy = wines_df.copy()\n",
     "\n",
-    "low_prices_weights = [.2, .3, .25, .15, .05, .025, .015, 0.01, 0, 0]\n",
+    "# Agregamos Otras Uvas a las uvas para coincidir con la elección de synthetic user\n",
+    "top_grapes = list(get_top_grapes(grape_selection, 8).index)\n",
+    "other_grapes = [grape for grape in grapes if grape not in top_grapes]\n",
+    "wines_copy[\"Otras Uvas\"] = wines_copy[other_grapes].max(axis=1)\n",
     "\n",
-    "low_price_index = random.choices(population=range(len(price_quantiles)), weights=low_prices_weights, k=1)[0]\n",
     "\n",
-    "high_top_limit = len(price_quantiles)\n",
-    "high_bottom_limit = low_price_index + 2 if (low_price_index + 2) < len(price_quantiles) else (low_price_index + 1)\n",
+    "user_input = {\n",
+    "    \"main_pairing\": \"beef\",\n",
+    "    \"pairing_list\": [\"beef\", \"pasta\"],\n",
+    "    \"grape_list\": [\"Malbec\", \"Cabernet Franc\", \"Otras Uvas\"],\n",
+    "    \"precio_min\": 20,\n",
+    "    \"precio_max\": 100,\n",
+    "    \"tastes\": {\n",
+    "        \"body\": 0.6,\n",
+    "        \"tannis\": 0.3,\n",
+    "        \"sweetness\": 0.3,\n",
+    "        \"acidity\": 0.4\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "high_price_possible = range(high_bottom_limit, high_top_limit)\n",
+    "# Filtro por pairings\n",
+    "user_pairings = user_input[\"pairing_list\"]\n",
+    "wine_base = wines_copy[wines_copy[user_pairings].sum(axis=1)>0]\n",
     "\n",
-    "high_prices_weights = [1 / x**2 for x in high_price_possible]\n",
+    "# Filtro por precio\n",
+    "wine_base = wine_base[wine_base[\"price\"]>=user_input[\"precio_min\"]]\n",
+    "wine_base = wine_base[wine_base[\"price\"]<=user_input[\"precio_max\"]]\n",
     "\n",
-    "high_price_index = random.choices(population=high_price_possible, weights=high_prices_weights, k=1)[0]\n",
+    "# Filtro por uvas\n",
+    "wine_base = wine_base[wine_base[user_input[\"grape_list\"]].sum(axis=1)>0]\n",
     "\n",
-    "price_range = price_quantiles[low_price_index], price_quantiles[high_price_index]\n",
+    "# Zscore quality/price\n",
+    "wine_base['rating_zscore'] = stats.zscore(wine_base[\"rating\"])\n",
+    "wine_base['price_zscore'] = stats.zscore(wine_base[\"price\"])\n",
+    "wine_base[\"zscore_quality_price\"] = wine_base['rating_zscore'] - wine_base['price_zscore']\n",
     "\n",
-    "price_range\n",
+    "# User similarity (Euclidean Distances)\n",
+    "scaler = MinMaxScaler()\n",
     "\n",
-    "#high_price_index = random.choice(high_price_possible)\n",
+    "taste_features = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
     "\n",
-    "# high_price = random.randint(low_price+3,9)\n",
+    "wine_base[scaled_tastes] = scaler.fit_transform(wine_base[taste_features])\n",
+    "user_tastes = np.array(list(user_input[\"tastes\"].values())).reshape(1,-1)\n",
+    "distances = euclidean_distances(user_tastes, wine_base[scaled_tastes])[0]\n",
+    "wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
     "\n",
-    "# print(low_price, high_price)"
+    "# Puntaje sintético del vino\n",
+    "wine_base[\"wine_score\"] = (\n",
+    "    0.3 * (wine_base[\"rating\"] / 5) + \n",
+    "    0.3 * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
+    "    0.1 * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
+    "    0.2 * wine_base[\"user_similarity\"] + \n",
+    "    0.1 * wine_base[user_input[\"main_pairing\"]]\n",
+    ")\n",
+    "\n",
+    "# Selección de uno de los mejores 10 vinos\n",
+    "top_wine_base = wine_base.nlargest(10, \"wine_score\")\n",
+    "top_wine_base.index = np.arange(2, len(top_wine_base)+2)\n",
+    "top_selection_weights = [1 / i for i in top_wine_base.index]\n",
+    "disturbance = random.random()\n",
+    "top_selection_weights\n",
+    "\n",
+    "# Falta ajustar los pesos y agregarles un disturbance para la elección del vino\n",
+    "# Simular si le gustó o no\n",
+    "# Generar clase\n",
+    "# Crear datos sintéticos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5d9049",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
