Selección de vino con lógica de usuario + componente aleatorio

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1057,
+   "execution_count": 1,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b705032",
    "metadata": {},
    "outputs": [],
@@ -156,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1059,
+   "execution_count": 3,
    "id": "6dbbb253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[20, 27]"
+       "[0, 15]"
       ]
      },
-     "execution_count": 1059,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,19 +215,21 @@
     {
      "data": {
       "text/plain": [
-       "[0.5,\n",
-       " 0.3333333333333333,\n",
-       " 0.25,\n",
-       " 0.2,\n",
-       " 0.16666666666666666,\n",
-       " 0.14285714285714285,\n",
-       " 0.125,\n",
-       " 0.1111111111111111,\n",
-       " 0.1,\n",
-       " 0.09090909090909091]"
+       "wine_link          https://www.vivino.com/septima-malbec/w/80080?...\n",
+       "name                                                          Malbec\n",
+       "year                                                          2022.0\n",
+       "winery                                                       Séptima\n",
+       "rating                                                           3.9\n",
+       "                                         ...                        \n",
+       "tannis_scld                                                  0.32567\n",
+       "sweetness_scld                                              0.425778\n",
+       "acidity_scld                                                0.131151\n",
+       "user_similarity                                             0.646876\n",
+       "wine_score                                                  0.726342\n",
+       "Name: 1858, Length: 128, dtype: object"
       ]
      },
-     "execution_count": 1087,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,8 +251,8 @@
     "    \"main_pairing\": \"beef\",\n",
     "    \"pairing_list\": [\"beef\", \"pasta\"],\n",
     "    \"grape_list\": [\"Malbec\", \"Cabernet Franc\", \"Otras Uvas\"],\n",
-    "    \"precio_min\": 20,\n",
-    "    \"precio_max\": 100,\n",
+    "    \"precio_min\": 0,\n",
+    "    \"precio_max\": 15,\n",
     "    \"tastes\": {\n",
     "        \"body\": 0.6,\n",
     "        \"tannis\": 0.3,\n",
@@ -297,12 +299,14 @@
     "\n",
     "# Selección de uno de los mejores 10 vinos\n",
     "top_wine_base = wine_base.nlargest(10, \"wine_score\")\n",
-    "top_wine_base.index = np.arange(2, len(top_wine_base)+2)\n",
-    "top_selection_weights = [1 / i for i in top_wine_base.index]\n",
-    "disturbance = random.random()\n",
-    "top_selection_weights\n",
+    "top_selection_weights = [(1 - .075)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a 7.5%\n",
+    "top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
+    "total_weight = sum(top_selection_weights)\n",
+    "top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
+    "selected_wine_id = int(random.choices(top_wine_base.index, top_selection_weights, k=1)[0])\n",
+    "selected_wine = wine_base.loc[selected_wine_id]\n",
     "\n",
-    "# Falta ajustar los pesos y agregarles un disturbance para la elección del vino\n",
+    "# Pasar esto a función\n",
     "# Simular si le gustó o no\n",
     "# Generar clase\n",
     "# Crear datos sintéticos"
