Avanza synthetic user

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,9 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from scipy import stats\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join('..', '..', 'src', 'utils')))\n",
@@ -163,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "[0, 15]"
+       "[18, 23]"
       ]
      },
      "execution_count": 3,
@@ -209,31 +212,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "79ae3409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transforma df escalando los gustos y agregando columna \"Otras Uvas\"\n",
+    "\n",
+    "def transform_df(df, top_grapes):\n",
+    "    tra_df = df\n",
+    "\n",
+    "    # Scaling de sabores\n",
+    "    scaler = MinMaxScaler()\n",
+    "    \n",
+    "    taste_features = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "    scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
+    "    tra_df[scaled_tastes] = scaler.fit_transform(tra_df[taste_features])\n",
+    "    \n",
+    "    # Columna Otras Uvas\n",
+    "    other_grapes = [grape for grape in grapes if grape not in top_grapes]\n",
+    "    tra_df[\"Otras Uvas\"] = tra_df[other_grapes].max(axis=1)\n",
+    "    \n",
+    "    return tra_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad8740bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pick_wine(wines_df, user_input, top_n = 10, d=0.075):\n",
+    "    wines_copy = wines_df.copy()\n",
+    "\n",
+    "    # User Inputs\n",
+    "    user_pairings = user_input.get(\"pairing_list\")\n",
+    "    precio_min = user_input.get(\"precio_min\")\n",
+    "    precio_max = user_input.get(\"precio_max\")\n",
+    "    grape_list = user_input.get(\"grape_list\")\n",
+    "\n",
+    "    # User Weights\n",
+    "    user_weights = user_input.get(\"weights\")\n",
+    "    rating_w = user_weights.get(\"rating\")\n",
+    "    price_quality_w = user_weights.get(\"price_quality\")\n",
+    "    rating_qty_w = user_weights.get(\"rating_qty\")\n",
+    "    user_similarity_w = user_weights.get(\"user_similarity\")\n",
+    "    main_pairing_w = user_weights.get(\"main_pairing\")\n",
+    "\n",
+    "    # Filtro por pairings\n",
+    "    if user_pairings is not None:\n",
+    "        wine_base = wines_copy[wines_copy[user_pairings].sum(axis=1)>0]\n",
+    "\n",
+    "    # Filtro por precio\n",
+    "    if precio_min is not None:\n",
+    "        wine_base = wine_base[wine_base[\"price\"]>=precio_min]\n",
+    "    if precio_max is not None:\n",
+    "        wine_base = wine_base[wine_base[\"price\"]<=precio_max]\n",
+    "    \n",
+    "    # Filtro por uvas\n",
+    "    if grape_list is not None:\n",
+    "        wine_base = wine_base[wine_base[grape_list].sum(axis=1)>0]\n",
+    "\n",
+    "    # Zscore quality/price\n",
+    "    wine_base['rating_zscore'] = stats.zscore(wine_base[\"rating\"])\n",
+    "    wine_base['price_zscore'] = stats.zscore(wine_base[\"price\"])\n",
+    "    wine_base[\"zscore_quality_price\"] = wine_base['rating_zscore'] - wine_base['price_zscore']\n",
+    "\n",
+    "    # User similarity (Euclidean Distances)\n",
+    "    user_tastes = np.array(list(user_input[\"tastes\"].values())).reshape(1,-1)\n",
+    "    scaled_tastes = [\"body_scld\", \"tannis_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
+    "    distances = euclidean_distances(user_tastes, wine_base[scaled_tastes])[0]\n",
+    "    wine_base[\"user_similarity\"] = 1 - (distances / distances.max())\n",
+    "\n",
+    "    # Puntaje sintético del vino\n",
+    "    wine_base[\"wine_score\"] = (\n",
+    "        rating_w * (wine_base[\"rating\"] / 5) + \n",
+    "        price_quality_w * (wine_base[\"zscore_quality_price\"] / wine_base[\"zscore_quality_price\"].max()) + \n",
+    "        rating_qty_w * (wine_base[\"rating_qty\"] / wine_base[\"rating_qty\"].max()) +\n",
+    "        user_similarity_w * wine_base[\"user_similarity\"] + \n",
+    "        main_pairing_w * wine_base[user_input[\"main_pairing\"]]\n",
+    "    )\n",
+    "\n",
+    "    # Selección de uno de los mejores 10 vinos\n",
+    "    top_wine_base = wine_base.nlargest(top_n, \"wine_score\")\n",
+    "    top_selection_weights = [(1 - d)**n for n in range(len(top_wine_base))] # Pesos decrecientes de a 7.5%\n",
+    "    top_selection_weights = [w*(random.random() + 1) for w in top_selection_weights] # Agregamos factor aleatorio\n",
+    "    total_weight = sum(top_selection_weights)\n",
+    "    top_selection_weights = [w / total_weight for w in top_selection_weights] # Normalizamos para interpretabilidad\n",
+    "    selected_wine_id = int(random.choices(top_wine_base.index, top_selection_weights, k=1)[0])\n",
+    "    selected_wine = wine_base.loc[selected_wine_id]\n",
+    "    return selected_wine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1a5d9049",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "wine_link          https://www.vivino.com/septima-malbec/w/80080?...\n",
-       "name                                                          Malbec\n",
-       "year                                                          2022.0\n",
-       "winery                                                       Séptima\n",
-       "rating                                                           3.9\n",
-       "                                         ...                        \n",
-       "tannis_scld                                                  0.32567\n",
-       "sweetness_scld                                              0.425778\n",
-       "acidity_scld                                                0.131151\n",
-       "user_similarity                                             0.646876\n",
-       "wine_score                                                  0.726342\n",
-       "Name: 1858, Length: 128, dtype: object"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy import stats\n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
